--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   path: ^1.9.0
   equatable: ^2.0.5
   flutter_spinkit: ^5.2.1
+  mockito: ^5.4.4
+  build_runner: ^2.4.10
 
 dev_dependencies:
   flutter_test:
